add swagger document
